force-app/main/default/objects/HRCFSL_Inspection_Template_Work_Type__c/HRCFSL_Inspection_Template_Work_Type__c.object-meta.xml
<CustomObject>
    <label>Inspection Template Work Type</label>
    <nameField>
        <displayFormat>WT-{000000000}</displayFormat>
        <label>Inspection Template Work Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Template Work Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>