force-app/main/default/objects/HRCFSL_Inspection_Template_Work_Type__c/fields/HRCFSL_Inspection_Template__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Inspection_Template__c</fullName>
    <label>Inspection Template</label>
    <referenceTo>HRCFSL_Inspection_Template__c</referenceTo>
    <relationshipLabel>Inspection Template Work Types</relationshipLabel>
    <relationshipName>Inspection_Template_Work_Types</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>