force-app/main/default/objects/HRCFSL_Inspection_Template_Work_Type__c/fields/HRCFSL_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product_Model__c</fullName>
    <description>Get the value of Product Model from Inspection Template. Developed this for #SE-749</description>
    <formula>HRCFSL_Inspection_Template__r.HRCFSL_Product_Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Model</label>
    <type>Text</type>
</CustomField>