force-app/main/default/objects/HRCFSL_Inspection_Template_Work_Type__c/fields/HRCFSL_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Work_Type__c</fullName>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Inspection Template Work Types</relationshipLabel>
    <relationshipName>Inspection_Template_Work_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>